# 97-things-every-programmer-should-know

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
requirements/: base.txt  development.txt
scripts/: common.sh  mongo_backup.sh  start-dev.sh  start-prod.sh  update_packages.sh
src/ninety_seven_things/: app.py  main.py
src/ninety_seven_things/core/: config.py  db.py  logging.py
src/ninety_seven_things/interface/: __init__.py  article.py  author.py  main.py
src/ninety_seven_things/lib/: __init__.py  constants.py  enums.py  exceptions.py  helpers.py  models.py  passwords.py  query.py  role.py  schemas.py  security.py
src/ninety_seven_things/lib/types/: __init__.py  phone_number.py
src/ninety_seven_things/modules/application_administrator/: models.py
src/ninety_seven_things/modules/article/: dependencies.py  exceptions.py  models.py  role.py  schemas.py  service.py  views.py
src/ninety_seven_things/modules/author/: dependencies.py  exceptions.py  models.py  role.py  schemas.py  service.py  views.py
src/ninety_seven_things/modules/git/: exceptions.py  interface.py
src/ninety_seven_things/modules/mail/: exceptions.py  schemas.py  service.py
src/ninety_seven_things/modules/user/: dependencies.py  exceptions.py  models.py  role.py  schemas.py  service.py  views.py
src/ninety_seven_things/modules/utilities/: role.py  schemas.py  service.py  views.py
src/ninety_seven_things/templates/: email_confirmation.html  forgot_password.html  internal_server_error.html  new_account.html  reset_password.html
src/ninety_seven_things/ui/: index.py
src/ninety_seven_things/ui/admin/: __init__.py  article.py  author.py  main.py
src/ninety_seven_things/ui/reader/: main.py
tests/: conftest.py  data.py  helpers.py  util.py
